# scrolls-dolos

./: Cargo.toml  README.md
examples/basic/: daemon.toml  docker-compose.yml  tx_count_by_address.ts
examples/crdt/: README.md  daemon.toml  docker-compose.yml  run.js
examples/crdt/reducers/src/: balance_by_address.ts  balance_by_stake_address.ts  balance_by_stake_key.ts  mod.ts
examples/crdt/reducers/src/core/: core.ts
examples/rdbms/: README.md  daemon.toml  docker-compose.yml  run.js
examples/rdbms/reducers/: build.ts
examples/rdbms/reducers/data/: block.json
examples/rdbms/reducers/src/: balance_by_address.ts  balance_by_stake_address.ts
src/: lib.rs
src/filters/: match_pattern.rs  mod.rs
src/filters/deno/: mod.rs
src/filters/legacy_v1/: mod.rs  prelude.rs
src/framework/: mod.rs
src/reduce/deno/: mod.rs
src/reduce/deno/modules/reducers/: balance_by_address.ts  balance_by_stake_key.ts
src/reduce/rust/: balance_by_address.rs  balance_by_stake_address.rs  balance_by_stake_key.rs  mod.rs
src/reducers/: mod.rs
src/reducers/deno/: balance_by_address.js  balance_by_stake_key.js  mod.rs
src/reducers/rust/: balance_by_address.rs  balance_by_stake_key.rs  mod.rs
src/source/: mod.rs  utxorpc.rs
src/storage/: mod.rs  pg.rs  postgres.rs  redis.rs
